--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="webapi_string">892941247618-4rn5hfgvlrqu5oritr3l22v6rocrosnv.apps.googleusercontent.com</string>
 </resources>
